--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,18 +3,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.1 <4.0.0'
+    sdk: ">=3.0.1 <4.0.0"
 dependencies:
-  flutter:
-    sdk: flutter
-  cupertino_icons: ^1.0.2
+    flutter:
+        sdk: flutter
+    cupertino_icons: ^1.0.2
+    flutter_highlight: ^0.7.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  lottie: ^1.0.0
-  connectivity: ^3.0.6
-  flutter_lints: ^2.0.0
-
+    flutter_test:
+        sdk: flutter
+    lottie: ^1.0.0
+    connectivity: ^3.0.6
+    http: ^1.0.0
 flutter:
-  uses-material-design: true
+    uses-material-design: true
